--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
   <div class="title">
     <h1>JavaScript Drum Kit 2022</h1>
-    <h2>Hugo Marinho</h2>
   </div>
   <div class="keys">
     <div data-key="65" class="key">
@@ -47,6 +46,7 @@
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
+    <div class="footer">Hugo Marinho 2022</div>
   </div>
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
