removed title and added footer

--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="title">
-    <h1>JavaScript Drum Kit 2022</h1>
-  </div>
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -46,8 +43,8 @@
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
-    <div class="footer">Hugo Marinho 2022</div>
   </div>
+  <div class="footer">Hugo Marinho 2022</div>
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
